src/css/site.css
/**
 * Site.css
 * ========================================================================= */

/**
 * Default < 724px
 * ------------------------------------------------------------------------- */

/**
 * Structure
 * ------------------------------------------- */

html,
body {
  margin: 0;
  padding: 0;

  font-family: 'Open Sans', 'sans-serif';
  font-size: 62.5%;
  color: #e6e6dc;

  background-color: #111;
}

a {
  color: #e6e6dc;
  text-decoration: none;

  transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86) 0ms;
}

a:hover {
  color: #d9d9d9;
}

h1,
h2 {
  margin-top: 0;
  margin-bottom: 2rem;

  font-family: 'Vollkorn', 'serif';
  font-weight: 400;

  text-align: center;
}

h2 {
  font-size: 4.2rem;
}

h2 small {
  font-size: 2.6rem;
}

p {
  margin-top: 0;
  margin-bottom: 2.4rem;
  line-height: 2.4rem;
}

p.featured {
  font-weight: 600;
}

small {
  display: block;
}

ul {
  font-size: 1.6rem;
}

.tfs-logo {
  width: 100%;

  background: url(../images/tfs_logo.png) 50% 0 no-repeat;
  background-size: auto 100%;
  text-indent: -9999px;
}

/**
 * Header
 * ------------------------------------------- */

.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  height: 98vh;

  background: no-repeat center url(../images/header.jpg);
  background-size: cover;
  background-position: fixed;
}

.header .content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  width: 100%;
}

.header h1 {
  height: 8rem;
}

.header .social {
  margin: 0;
  padding: 0;

  list-style: none;
}

/**
 * Nav
 * ------------------------------------------- */

.nav {
  display: none;
}


/**
 * Sections
 * ------------------------------------------- */

section,
footer {
  padding: 2.4rem;

  font-size: 1.4rem;
  text-shadow: .3rem .3rem .5rem rgba(0, 0, 0, 0.4);
}

section .img--round {
  display: block;
  width: 20rem;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2.4rem;

  border-radius: 50%;
}


/**
 * About
 * ------------------------------------------- */

.about {
  background: no-repeat center url(../images/panel.jpg);
  background-attachment: fixed;
  background-size: cover;
}


/**
 * Services
 * ------------------------------------------- */

.services {
  background: no-repeat center url(../images/couch.jpg);
  background-attachment: fixed;
  background-size: cover;
}


/**
 * Portfolio
 * ------------------------------------------- */

.portfolio {
  padding-left: 0;
  padding-right: 0;

  color: #eee;

  background-color: #111;
  background: no-repeat center url(../images/portfolio.jpg);
  background-size: cover;
  background-position: fixed;
}

.gridder-list {
  position: relative;
  width: 50%;
  font-size: 0;

  cursor: pointer;
}

.gridder-list:nth-child(n) {
  margin-bottom: 0;
  margin-right: 0;
}

.gridder-list img {
  width: 100%;
}

.gridder-show {
  margin-bottom: 2.4rem;
  background-color: #111;
  z-index: 2;
}

.gridder-show h4,
.gridder-show p,
.gridder-show dl {
  margin-left: 2.4rem;
  margin-right: 2.4rem;
}

.gridder-show h4 {
  margin-bottom: 1.2rem;
  margin-top: 0;

  font-size: 2.4rem;
  text-align: center;
  text-transform: uppercase;
}

.gridder-show p {
  text-align: center;
}

.gridder-show dl {
  display: flex;
  margin: 0;
  flex-wrap: wrap;
}

.gridder-show dt,
.gridder-show dd {
  padding: 0 1.2rem;
  box-sizing: border-box;
  flex: 0 0 100%;

  text-align: center;
}

.gridder-show dd {
  margin-bottom: 1.2rem;
  margin-left: 0;

  text-transform: uppercase;
}

.gridder.hasSelectedItem .gridder-list:not(.selectedItem):after {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  content: "";

  background: #111;
  opacity: .5;
}

.slide-image {
  display: block;
  width: 100%;
}

.slide-text {
  position: relative;
  padding-top: 2.4rem;
  padding-bottom: 2.4rem;
}

.slide-text-bg {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -2;

  background-position: bottom center;
  background-size: cover;

  transform: scaleY(-1);
}

.slide-text-bg:after {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -2;

  content: " ";

  background: linear-gradient(0deg, rgba(0,0,0,.5), rgba(0,0,0,1));
}



/**
 * Footer
 * ------------------------------------------- */

.footer {
  clear: both;

  text-align: center;

  background: no-repeat center url(../images/wall.jpg);
  background-attachment: fixed;
  background-size: cover;
}

.footer .content {
  display: flex;
  flex-direction: column;
  justify-content: center;

  min-height: 70vh;
}

.footer h2 {
  margin-bottom: 0;
}

.footer h3 {
  height: 8rem;
  margin-top: 2.4rem;
}

.footer .map {
  height: 50vh;
  width: 100%;

  box-shadow: .3rem .3rem .5rem rgba(0, 0, 0, 0.4);
}

.footer-links a {
  display: block;

  margin-bottom: 2.4rem;
}



/**
 * Medium > 724px < 968px
 * ------------------------------------------------------------------------- */

@media screen and (min-width: 724px) {

  /**
   * Structure
   * ----------------------------------------- */

  p.featured {
    font-family: 'Vollkorn', 'serif';
    font-size: 2.6rem;
    font-weight: 400;
    line-height: 3rem;
    text-align: center;
  }

  /**
   * Header
   * ----------------------------------------- */

  .header {
    height: calc(100vh - 5.5rem);
  }

  .header h1 {
    height: 17rem;
  }


  /**
   * Nav
   * ----------------------------------------- */

  .nav {
    display: flex;
    justify-content: center;

    background-color: #000;
  }

  .nav.stick {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 3000;
  }

  .nav a {
    display: block;
    padding: 2rem;

    color: #d9d9d9;
    font-size: 1.4rem;
    text-transform: uppercase;
  }

  .nav a.active {
    color: #cf2525;
  }

  .nav a:hover {
    color: #cf2525;
  }


  /**
   * Section
   * ----------------------------------------- */

  section {
    padding: 12rem 4rem;
  }

  section .content {
    margin-left: auto;
    margin-right: auto;
    max-width: 56rem;
  }


  /**
   * Services
   * ------------------------------------------- */

  .service-list {
    width: 60vw;
    max-width: 50rem;
    margin-left: auto;
    margin-right: auto;
  }


  /**
   * Portfolio
   * ------------------------------------------- */

  .portfolio h2 {
    padding-bottom: 4rem;
  }

  .gridder-list {
    width: 25%;
  }

  .slide-content {
    padding-top: 1.2rem;
    padding-bottom: 1.2rem;
  }

  .gridder-show dt,
  .gridder-show dd {
    flex: 0 0 50%;
  }

  .gridder-show dt {
    text-align: right;
  }

  .gridder-show dd {
    margin-bottom: 0.6rem;
    text-align: left;
  }

  .gridder-show dd.m-b {
    margin-bottom: 2.4rem;
  }



  /**
   * Footer
   * ------------------------------------------- */

  .footer {
    padding-bottom: 20vh;
  }

  .footer h2 {
    margin-top: 12rem;
  }

  .footer .content {
    min-height: calc(80vh - 20rem);
  }

  .footer .map {
    width: 60vw;
    max-height: 40rem;
  }
}


/**
 * Large < 968px
 * ------------------------------------------------------------------------- */

 @media screen and (min-width: 968px) {

  /**
   * Sections
   * ------------------------------------------- */

  section {
    padding-left: 26rem;
    padding-right: 26rem;
  }

  /**
   * Portfolio
   * ------------------------------------------- */

  .gridder-list {
    width: 20%;
  }


  /**
   * Footer
   * ------------------------------------------- */

  .footer-links a {
    display: inline-block;
    margin-bottom: 0;
    margin-left: 2rem;
    margin-right: 2rem;
  }

  .footer-links a + a::before {
    position: relative;
    left: -2rem;

    content: "•"
  }
}


 /**
 * X-Large < 1200px
 * ------------------------------------------------------------------------- */

 @media screen and (min-width: 1200px) {

  /**
   * Portfolio
   * ------------------------------------------- */

  .gridder-list {
    width: 10%;
  }
}

